Change to POKEMON API

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="style.css" rel="stylesheet" />
+    <script src="index.js"></script>
   </head>
   <body>
     <header>
@@ -17,48 +18,12 @@
       Pokedex Entry
     </header>
     <main>
-      <div class="card">
-        <!-- <img src="https://pokedex.juliettebois.fr/images/logo.png" alt="" /> -->
-        <ul>
-          <li>Name</li>
-          <li>Generation</li>
-        </ul>
-      </div>
-      <div class="card">
-        <!-- <img src="https://pokedex.juliettebois.fr/images/logo.png" alt="" /> -->
-        <ul>
-          <li>Name</li>
-          <li>Generation</li>
-        </ul>
-      </div>
-      <div class="card">
-        <!-- <img src="https://pokedex.juliettebois.fr/images/logo.png" alt="" /> -->
-        <ul>
-          <li>Name</li>
-          <li>Generation</li>
-        </ul>
-      </div>
-      <div class="card">
-        <!-- <img src="https://pokedex.juliettebois.fr/images/logo.png" alt="" /> -->
-        <ul>
-          <li>Name</li>
-          <li>Generation</li>
-        </ul>
-      </div>
-      <div class="card">
-        <!-- <img src="https://pokedex.juliettebois.fr/images/logo.png" alt="" /> -->
-        <ul>
-          <li>Name</li>
-          <li>Generation</li>
-        </ul>
-      </div>
-      <div class="card">
-        <!-- <img src="https://pokedex.juliettebois.fr/images/logo.png" alt="" /> -->
-        <ul>
-          <li>Name</li>
-          <li>Generation</li>
-        </ul>
-      </div>
+          <div id="container">
+        <div id="poke-container" class="ui cards">
+                <!-- will hold the cards for all the pokemon -->
+                <button id="generate-pokemon" class="ui secondary button">Generate Pokemon</button>
+        </div>
+    </div>
     </main>
     <footer>Developed by : Arya Aji</footer>
   </body>
