API Pokemon completes, need polishing

--- a/index.html
+++ b/index.html
@@ -17,14 +17,7 @@
       />
       Pokedex Entry
     </header>
-    <main>
-          <div id="container">
-        <div id="poke-container" class="ui cards">
-                <!-- will hold the cards for all the pokemon -->
-                <button id="generate-pokemon" class="ui secondary button">Generate Pokemon</button>
-        </div>
-    </div>
-    </main>
+    <main id="container"></main>
     <footer>Developed by : Arya Aji</footer>
   </body>
 </html>
